--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@types/lodash": "^4.14.157",
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
+    "@vercel/node": "^1.7.2",
     "parcel": "^2.0.0-beta.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "azure-storage": "^2.10.3",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1"
