--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel serve ./src/index.html",
+    "dev": "concurrently \"node DevServer.js\" \"parcel serve ./src/index.html\"",
     "build": "parcel build ./src/index.html"
   },
   "repository": {
@@ -24,12 +24,14 @@
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
     "@vercel/node": "^1.7.2",
+    "concurrently": "^5.2.0",
     "parcel": "^2.0.0-beta.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "azure-storage": "^2.10.3",
     "chart.js": "^2.9.3",
+    "express": "^4.17.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "^16.13.1",
