Use react-chartjs-2 and switch to function components

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1"
   }
 }
